# FractalDreams

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/org/jtb/fractaldreams/: BurningShipDreamService.kt  FpsDisplay.kt  FractalDreamService.kt  GLMandelbrotDreamService.kt  GLMandelbrotRenderer.kt  JuliaDreamService.kt  MandelbrotDreamService.kt
app/src/main/res/raw/: fragment_shader.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: burning_ship_dream.xml  julia_dream.xml
gemini/: burning_ship.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
